--- a/Ricette/Basi/besciamella.tex
+++ b/Ricette/Basi/besciamella.tex
@@ -28,7 +28,7 @@ Quando avrai versato tutto il latte riporta sul fuoco e cuoci per portare alla c
 \end{method}
 
 \subsection*{Note}
-La ricetta base della besciamella che si presta a diverse varianti (es. olio e.v.o. al posto del burro e brodo vegetale al posto del latte. Se dovessero formarsi dei grumi puoi frullare con un frullatore a immersione.
+La ricetta base della besciamella si presta a diverse varianti: olio e.v.o. al posto del burro e brodo vegetale al posto del latte. Se dovessero formarsi dei grumi puoi frullare con un frullatore a immersione.
 
 % Figura
 %\showit[1.25in]{example-image-b}{This is a picture}
