--- a/Ricette/Primi/carbonara.tex
+++ b/Ricette/Primi/carbonara.tex
@@ -27,11 +27,13 @@
 
 	In una ciotola sbatti le uova con il pecorino grattugiato fino a formare un crema omogenea.
 
-	A cottura ultimata scola gli spaghetti, falli saltare fuori dal fuoco assieme al guanciale per circa 30 secondi in modo che si raffreddino leggermente, poi aggiungi la creama di uovo e continua a saltare e mescolare con vigore. Metti nei piatti e aggiungi abbondante pepe.
+	A cottura ultimata scola gli spaghetti, falli saltare fuori dal fuoco assieme al guanciale per circa 30 secondi in modo che si raffreddino leggermente, poi aggiungi la crema di uovo e continua a saltare e mescolare con vigore. Metti nei piatti e aggiungi abbondante pepe.
+	
+	Quando mantechi la pasta, se il sugo dovesse risultare troppo compatto, puoi correggere con poca acqua di cottura della pasta.
 
 	\underline{Ricetta scientifica}. Dopo aver rosolato il guanciale come nella ricetta precedente, sbatti le uova con il pecorino. Metti la ciotola in un bagnomaria e continua a sbattere portando la temperatura della crema fra \temp{59} e \temp{63}. Mantieni questa temperatura per circa 15 minuti togliendo dal bagnomaria o rimettendo sul fuoco a seconda della temperatura del composto.
 
-	Quando scoli la pasta, come nella ricetta precedente, falla saltare per 30 secondi con il guanciale in modo da abbassare un po' la temperatura. Poi aggiungi la crema di uovo. La creama preparata in questo modo è più densa della precedente, se necessario aggiungi qualche cucchiaio di acqua di cottura della pasta per rendere la crema più morbida. Metti nei piatti e aggiungi abbondante pepe nero.
+	Quando scoli la pasta, come nella ricetta precedente, falla saltare per 30 secondi con il guanciale in modo da abbassare un po' la temperatura. Poi aggiungi la crema di uovo. La crema preparata in questo modo è più densa della precedente, se necessario aggiungi qualche cucchiaio di acqua di cottura della pasta per rendere la crema più morbida. Metti nei piatti e aggiungi abbondante pepe nero.
 
 	% Esempio di tabella ---------->
 %\begin{table}[h]
