--- a/Ricette/Primi/penne-ubriaca.tex
+++ b/Ricette/Primi/penne-ubriaca.tex
@@ -17,7 +17,7 @@
 \end{ingreds}
 
 \begin{method}
-Rosola bene le salsicce sgranate in una padella, aggiungi quasi a fine cottura lo speck tagliato a dadini poi fai sfumare con almeno mezza bottiglia di lambrusco. Lascia evaporare l'alcool e aggiungi la panna. Fai restringere il sugo a fuoco moderato.
+Rosola bene le salsicce sgranate in una padella, aggiungi, quasi a fine cottura, lo speck tagliato a dadini poi fai sfumare con almeno mezza bottiglia di lambrusco. Lascia evaporare l'alcool e aggiungi la panna. Fai restringere il sugo a fuoco moderato.
 
 Porta a cottura la pasta in acqua salata, poi fai mantecare nel sugo aggiungendo un mestolo di acqua di cottura.
 
@@ -25,7 +25,7 @@ Metti nei piatti e aggiungi abbondante Parmigiano Reggiano grattugiato.
 
 \end{method}
 \subsection*{Note}
-	Accorgimenti importanti per replicare al meglio la ricetta: il vino deve essere secco, corposo e abbondante per dare un bel colore viola alla pasta; la panna deve essere fresca, meglio evitare la panna da cucina; il Parmigiano sopra alla pasta deve essere abbondantissimo.
+	Accorgimenti importanti per replicare al meglio la ricetta: il vino deve essere secco, corposo e abbondante per dare un bel colore viola alla pasta. La panna deve essere fresca, meglio evitare la panna da cucina. Il Parmigiano sopra alla pasta deve essere abbondantissimo.
 
 	Questo è praticamente un piatto unico.
 %\showit[1.25in]{example-image-b}{This is a picture}
