--- a/Ricette/Salse/cipolle-caramellate.tex
+++ b/Ricette/Salse/cipolle-caramellate.tex
@@ -17,9 +17,11 @@
 \end{ingreds}
 
 \begin{method}
-Taglia a metà le cipolle sbucciate e affettale, poi falle appassire in un tegame con un filo d'olio e un pizzico di sale.
+Affetta le cipolle dopo averle tagliate a metà. Fai appassire le cipolle in un tegame con un filo d'olio e un pizzico di sale.
 
-Quando le cipolle iniziano a sfrigolare aggiungi lo zucchero e continua a cuocere a fuoco moderato. Quando sfrigola di nuovo aggiungi l'aceto per fissare il colore e dare il giusto grado di acidità utile per la conservazione in vaso.
+Quando le cipolle iniziano a sfrigolare, aggiungi lo zucchero e continua a cuocere a fuoco moderato. Quando sfrigola di nuovo, aggiungi l'aceto per fissare il colore e dare il giusto grado di acidità utile per la conservazione in vaso.
+
+Sterilizza i vasetti, riempili con le cipolle caramellate fino ad arrivare ad un centimetro dal bordo avendo cura di rimuovere tutta l'aria eventualmente intrappolata fra le cipolle. Chiudi ermeticamente e fai bollire i vasetti per 15 minuti lasciandoli raffreddare nell'acqua per formare il sottovuoto.
 
 
 %\begin{table}[h]
