--- a/Ricette/Salse/maionese.tex
+++ b/Ricette/Salse/maionese.tex
@@ -7,7 +7,7 @@
 %\freeze
 \begin{ingreds}
 	1 uovo \index{uova}
-	200ml di olio di semi di girasole\ index{olio!olio di semi di girasole}
+	200ml di olio di semi di girasole\index{olio!olio di semi di girasole}
 	un cucchiaino di senape \index{senape}
 	un pizzico di sale
 	un cucchiaio di limone \index{limone}
@@ -17,7 +17,7 @@
 \end{ingreds}
 
 \begin{method}
-\underline{Versione rapida}. Metti tutti gli ingredienti ad esclusione del limone nel bicchiere del frullatore a immersione. Inserisci il frullatore a immersione fino al fondo del bicchiere poi azionalo alla massima potenza. Non muovere il frullatore fino a che non vedi la maionese che inizia a formarsi. A quel punto sali lentamente. Aggiungi il limone e continua a frullare per amalgamare gli ingredienti.
+\underline{Versione rapida}. Metti tutti gli ingredienti ad esclusione del limone nel bicchiere del frullatore a immersione. Inserisci il frullatore a immersione fino al fondo del bicchiere, poi azionalo alla massima potenza. Non muovere il frullatore fino a che non vedi la maionese che inizia a formarsi. A quel punto sali lentamente. Aggiungi il limone e continua a frullare per amalgamare gli ingredienti.
 
 \underline{Versione pastorizzata}. Metti l'olio in un tegame e porta a \temp{121}. Metti gli altri ingredienti nel bicchiere del frullatore a immersione e frulla per amalgamare, poi aggiungi l'olio caldo a filo continuando a frullare fino ad ottenere una maionese soda. Lascia raffreddare prima di mangiare.
 
