--- a/Ricette/Primi/penne-rosa.tex
+++ b/Ricette/Primi/penne-rosa.tex
@@ -21,7 +21,7 @@
 \end{ingreds}
 
 \begin{method}
-Mentre porti a bollore l'acqua salata per cuocere la pasta, rosola la pancetta con un spicchio d'aglio, poi aggiungi la panna, il concentrato di pomodoro e fai restringere. Quando il sugo ha raggiunto la giusta consistenza, aggiungi abbondante origano.
+Mentre porti a bollore l'acqua salata per cuocere la pasta, rosola la pancetta con uno spicchio d'aglio poi, aggiungi la panna, il concentrato di pomodoro e fai restringere. Quando il sugo ha raggiunto la giusta consistenza, aggiungi abbondante origano.
 
 Cuoci la pasta e mantecala nel sugo.
 
