--- a/Ricette/Secondi-di-carne/nuggets-di-pollo.tex
+++ b/Ricette/Secondi-di-carne/nuggets-di-pollo.tex
@@ -24,17 +24,17 @@
 \begin{method}
 Passa al mixer il pollo con la cipolla, l'aglio schiacciato e il pane. Aggiungi il sale, la senape e la salsa di soia.
 
-Prepara le polpette schiacciandole leggermente per dare la classica forma di nuggets e mettile in un vassoio. Non esagerare con le dimensioni. Dovresti riuscire a preparare circa 30 polpette. Per evitare che la carne si attacchi alle mani puoi usare dei guanti monouso oppure puoi inumidirti le mani.
+Prepara le polpette schiacciandole leggermente per dare la classica forma di \textit{nuggets} e mettile in un vassoio (non esagerare con le dimensioni poiché la panatura ha un certo volume). Dovresti riuscire a preparare circa 30 polpette. Per evitare che la carne si attacchi alle mani puoi usare dei guanti monouso oppure puoi inumidirti le mani.
 
-Prepara la pastella mescolando con una frusta la farina con il latte e l'uovo. Aggiungi un pizzico di sale. Tuffa i nuggets nella pastella, poi nel pangrattato.
+Prepara la pastella mescolando con una frusta la farina con il latte e l'uovo. Aggiungi un pizzico di sale. Tuffa i \textit{nuggets} nella pastella, poi nel pangrattato.
 
 Friggi a \temp{175} per 3 minuti.
 
 \end {method}
 
 \subsection*{Note}
-		Puoi congelare i nuggets dopo averli impanati e cuocerli da congelati aumentando il tempo di cottura a 5 minuti.
+		Puoi congelare i \textit{nuggets} dopo averli impanati e cuocerli da congelati portando il tempo di cottura a 5 minuti.
 
-		Se hai molti nuggets da cuocere, puoi tenere un contenitore con i nuggets già fritti in forno statico alla temperatura di \temp{60} avendo cura di inserire un cucchiaio di legno nello sportello del forno per garantire la fuoriuscita di vapore oppure aprendo lo sportello abbastanza spesso. In questo modo potrai servire tutti i nuggets ancora caldi contemporaneamente.
+		Se hai molti \textit{nuggets} da cuocere, puoi tenere un contenitore con il pollo già fritto in forno statico alla temperatura di \temp{60} avendo cura di inserire un cucchiaio di legno nello sportello del forno per garantire la fuoriuscita di vapore oppure aprendo lo sportello abbastanza spesso. In questo modo potrai servire tutto il fritto assieme ancora caldo.
 
 
