Modificate dosi della salsa BBQ

--- a/Ricette/Salse/salsa-bbq.tex
+++ b/Ricette/Salse/salsa-bbq.tex
@@ -5,18 +5,19 @@
 \autore{Max}
 \begin{ingreds}
 	200g di doppio \index{concentrato di pomodoro}
-	200g di miele\index{miele} (NOTA: Diminuire)
-	260g di aceto di mele
-	120g di salsa worchester\index{salsa worchester}
-	1 cucchiaio di senape\index{senape}
-	40g di zucchero
+	150g di miele\index{miele}
+	300g di aceto
+	180g di marmellata di albicocche
+	100g di salsa di soia\index{salsa di soia}
+	70g di zucchero
+	50g di senape\index{senape}
 	15g di sale
 	1,2g di xantana\index{xantana}
-	1 cipolla\index{cipolla}
+	0,6g di chiodi di garofano in polvere
+	0,5g noce moscata
+	1/2 cipolla\index{cipolla}
 	2 spicchi d'aglio
-	2 cucchiai di marmellata di albicocche
-	noce moscata
-	pimento o altre spezie a piacere
+	altre spezie a piacere
 %\columnbreak
 %\ingredients[For the Crumble Mixture:]
 
