--- a/Ricette/Salse/salsa-bbq.tex
+++ b/Ricette/Salse/salsa-bbq.tex
@@ -1,10 +1,10 @@
 \recipe[]{Salsa BBQ all'abicocca}\label{salsa-bbq}
 \serves{-}
-\preptime{1 ora}
+\preptime{30 minuti}
 \cooktime{10 minuti}
 \autore{Max}
 \begin{ingreds}
-	200g di doppio \index{concentrato di pomodoro}
+	200g di doppio concentrato di pomodoro\index{concentrato di pomodoro}
 	150g di miele\index{miele}
 	300g di aceto
 	180g di marmellata di albicocche
