Migliorato testo e aggiunti appunti per possivile varaiazione della ricetta

--- a/Ricette/Salse/salsa-bbq.tex
+++ b/Ricette/Salse/salsa-bbq.tex
@@ -5,10 +5,10 @@
 \autore{Max}
 \begin{ingreds}
 	200g di doppio concentrato di pomodoro\index{concentrato di pomodoro}
-	150g di miele\index{miele}
+	150g di miele\index{miele}\footnote{Forse si può calare a 100g}
 	300g di aceto
 	180g di marmellata di albicocche
-	100g di salsa di soia\index{salsa di soia}
+	100g di salsa di soia\index{salsa di soia}\footnote{Provare ad aumentare a 120g}
 	70g di zucchero
 	50g di senape\index{senape}
 	15g di sale
@@ -24,8 +24,11 @@
 \end{ingreds}
 
 \begin{method}
-La preparazione della salsa BBQ all'albicocca è molto semplice. Metti tutti gli ingredienti in un frullatore ad esclusione della xantana. Frulla alla massima potenza dopo pochi secondi aggiungi la xantana nel vortice del frullatore.
+La preparazione della salsa BBQ all'albicocca è molto semplice. Metti tutti gli ingredienti in un frullatore ad esclusione della xantana avendo cura di tagliare a tocchetti la cipolla. Frulla alla massima potenza e, dopo pochi secondi, aggiungi la xantana nel vortice del frullatore.
+
 Cuoci la salsa a fuoco moderato fino al raggiungimento della consistenza desiderata.
+
+Se vuoi conservare la salsa riponila calda in vasetti sterilizzati. Chiudi ermeticamente e fai andare a bagno maria per 15 minuti. Poi lascia raffreddare nell'acqua.
 \end{method}
 
 %\showit[1.25in]{example-image-b}{This is a picture}
