Sistemato testo nuggets di pollo

--- a/Ricette/Secondi-di-carne/nuggets-di-pollo.tex
+++ b/Ricette/Secondi-di-carne/nuggets-di-pollo.tex
@@ -4,27 +4,28 @@
 \cooktime{4 minuti}
 \autore{Max}
 \begin{ingreds}
-	500g  petto di pollo \index{pollo}
-	45g cipolla bianca \index{cipolla}
-	poco aglio
-	80g pancarré o pangrattato \index{pancarré}\index{pangrattato}
+	500g  di petto di pollo \index{pollo}
+	45g di cipolla bianca \index{cipolla}
+	80g di pangrattato\index{pangrattato}
 	1 cucchiaino di sale fino
 	1 cucchiaino di senape \index{senape}
 	2 cucchiai di salsa di soia \index{salsa di soia}
+	Uno spicchio d'aglio
+
 
 \columnbreak
 \ingredients[Per la panatura:]
-	80g farina \index{farina}
-	80g latte \index{latte}
+	80g di farina \index{farina}
+	80g di latte \index{latte}
 	1 uovo \index{uova}
 	un pizzico di sale fino
 	pangrattato \index{pangrattato}
 \end{ingreds}
 
 \begin{method}
-Passa al mixer il pollo con la cipolla, l'aglio schiacciato e il pane. Aggiungi il sale, la senape e la salsa di soia.
+Passa al mixer il pollo con la cipolla e l'aglio schiacciato; in alternativa puoi usare il tritacarne. Aggiungi il sale, la senape, la salsa di soia e il pangrattato poi impasta per amalgamare tutti gli ingredienti.
 
-Prepara le polpette schiacciandole leggermente per dare la classica forma di \textit{nuggets} e mettile in un vassoio (non esagerare con le dimensioni poiché la panatura ha un certo volume). Dovresti riuscire a preparare circa 30 polpette. Per evitare che la carne si attacchi alle mani puoi usare dei guanti monouso oppure puoi inumidirti le mani.
+Prepara le polpette schiacciandole leggermente per dare la classica forma di pepita e mettile in un vassoio. Non produrre delle pepite eccessivamente grandi poiché la panatura avrà una parte consistente della pepita. Dovresti riuscire a preparare circa 30 polpette. Per evitare che la carne si attacchi alle mani puoi usare dei guanti monouso oppure puoi inumidire le mani.
 
 Prepara la pastella mescolando con una frusta la farina con il latte e l'uovo. Aggiungi un pizzico di sale. Tuffa i \textit{nuggets} nella pastella, poi nel pangrattato.
 
