Patate al forno

--- a/appunti-di-cucina.tex
+++ b/appunti-di-cucina.tex
@@ -187,6 +187,7 @@ Tutte queste ricette sono state provate e sono state inserite qui perché mi son
 \input{./Ricette/Salse/maionese}
 \input{./Ricette/Salse/rub-delicato}
 \input{./Ricette/Salse/my-magic-dust}
+\input{./Ricette/Basi/patate-al-forno}
 \input{./Ricette/Salse/salsa-bbq}
 \input{./Ricette/Basi/sfoglia}
 
