--- a/appunti-di-cucina.tex
+++ b/appunti-di-cucina.tex
@@ -174,6 +174,7 @@ Tutte queste ricette sono state provate e sono state inserite qui perché mi son
 \input{./Ricette/Pane-e-lievitati/panini-hamburger-veloci}
 \input{./Ricette/Pane-e-lievitati/pan-bauletto}
 \input{./Ricette/Pane-e-lievitati/pizza-da-pizzeria}
+\input{./Ricette/Pane-e-lievitati/pizza-da-pizzeria-2}
 \input{./Ricette/Pane-e-lievitati/pizza-in-teglia}
 \newpage
 \chapter{Antipasti}
