Aggiunta ricetta Shawarma

--- a/appunti-di-cucina.tex
+++ b/appunti-di-cucina.tex
@@ -191,6 +191,7 @@ Tutte queste ricette sono state provate e sono state inserite qui perché mi son
 \input{./Ricette/Basi/patate-al-forno}
 \input{./Ricette/Salse/salsa-bbq}
 \input{./Ricette/Basi/sfoglia}
+\input{./Ricette/Salse/shawarma}
 
 
 \newpage
