Gelato fior di latte e Shawarma

--- a/appunti-di-cucina.tex
+++ b/appunti-di-cucina.tex
@@ -240,6 +240,7 @@ Tutte queste ricette sono state provate e sono state inserite qui perché mi son
 \input{./Ricette/Dolci/cioccolata-in-tazza}
 \input{./Ricette/Dolci/crema-pasticcera}
 \input{./Ricette/Dolci/crostata-di-limone}
+\input{./Ricette/Dolci/gelato-fiordilatte}
 \input{./Ricette/Dolci/gelato-stracciatella-al-basilico}
 \input{./Ricette/Dolci/nocciolata}
 \input{./Ricette/Dolci/pancake}
