Aggiunta ricetta del kombucha

--- a/appunti-di-cucina.tex
+++ b/appunti-di-cucina.tex
@@ -248,7 +248,8 @@ Tutte queste ricette sono state provate e sono state inserite qui perché mi son
 \input{./Ricette/Dolci/tortellini}
 
 
-\chapter{Cocktails}
+\chapter{Cocktails e bevande}
+\input{./Ricette/Cocktails/kombucha}
 \input{./Ricette/Cocktails/mule}
 \input{./Ricette/Cocktails/negroni}
 
